Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.12.0
-
Windows 10
-
-
dc753374478d751c7c124030429e90d058934f9f (qt/qtbase/5.12)
Description
The attached minimal example does not behave properly in an environment like this one:
Two regular ("low-dpi") screens, left one set to 150% scaling, right one set to 100% scaling in Windows 10.
Run the program and drag the window around, in particular close to the screen borders. You will notice that depending on where the window is dragged, resizing of the window happens at a different position than resizing of its content, leading to e.g. 150% scaled content but 100% window size.
It gets more interesting when manipulating the coordinates from within QML: Use the Left and Right buttons on the GUI to move the window left and right while it's close to the screen borders. The GUI gets completely broken now, as seen in the screenshots.
Attachments
Issue Links
- relates to
-
QTBUG-73231 When a menubar spans across displays using different DPIs then opening menus on either display can show the menu in the wrong place
-
- Closed
-
- resulted from
-
QTBUG-62971 Problems with fixed size dialogs on multiscreen high DPI
-
- Closed
-